movies.yml
# Movies Service
apiVersion: v1
kind: Service
metadata:
  name: movies
  labels:
    name: movies
    application: ticket-system
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    application: ticket-system
    name: movies
---
# Movies Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
  labels:
    name: movies
    application: ticket-system
spec:
  selector:
    matchLabels:
      name: movies
      application: ticket-system
  strategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        name: movies
        application: ticket-system
    spec:
      containers:
        - name: movies
          image: docker.io/jackops93/movies
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          ports:
            - name: http
              containerPort: 5555
