tickets.yml
# Tickets Service
apiVersion: v1
kind: Service
metadata:
  name: tickets
  labels:
    name: tickets
    application: ticket-system
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    application: ticket-system
    name: tickets
---
# Tickets Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
  labels:
    name: tickets
    application: ticket-system
spec:
  selector:
    matchLabels:
      name: tickets
      application: ticket-system
  strategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        name: tickets
        application: ticket-system
    spec:
      containers:
        - name: tickets
          image: docker.io/jackops93/tickets
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          ports:
            - name: http
              containerPort: 5000
