users.yml
# Users Service
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    name: users
    application: ticket-system
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    application: ticket-system
    name: users
---
# Users Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    name: users
    application: ticket-system
spec:
  selector:
    matchLabels:
      name: users
      application: ticket-system
  strategy:
    type: RollingUpdate
  replicas: 3
  template:
    metadata:
      labels:
        name: users
        application: ticket-system
    spec:
      containers:
        - name: users
          image: docker.io/jackops93/users
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          ports:
            - name: http
              containerPort: 5000
