policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-ui
spec:
  podSelector:
    matchLabels:
      application: ticket-system
      name: ticket-ui
  policyTypes:
    - Ingress
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-booking-service
spec:
  podSelector:
    matchLabels:
      name: tickets
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            application: ticket-system
            name: ticket-ui
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-movies-service
spec:
  podSelector:
    matchLabels:
      name: movies
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            application: ticket-system
            name: ticket-ui
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-users-service
spec:
  podSelector:
    matchLabels:
      name: users
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            application: ticket-system
            name: ticket-ui
